compiler-core/src/go/tests/snapshots/gleam_core__go__tests__panic__bare.snap
---
source: compiler-core/src/go/tests/panic.rs
expression: "\nfn go() {\n  panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  panic
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[J gleam_P.Type[J]]() J {
  panic(gleam_P.MakeError(
    "panic",
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    map[string]any{},
  ))
}
