compiler-core/src/go/tests/snapshots/gleam_core__go__tests__panic__pipe.snap
---
source: compiler-core/src/go/tests/panic.rs
expression: "\nfn go(f) {\n  f |> panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(f) {
  f |> panic
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[I gleam_P.Type[I], L gleam_P.Type[L]](f I) L {
  var _pipe I = f
  _ = _pipe
  return (func() gleam_P.Func1_t[I, L] {
    panic(gleam_P.MakeError(
      "panic",
      "my/mod",
      3,
      "go",
      "`panic` expression evaluated.",
      map[string]any{},
    ))
  })()(_pipe)
}
