compiler-core/src/go/tests/snapshots/gleam_core__go__tests__panic__sequence.snap
---
source: compiler-core/src/go/tests/panic.rs
expression: "\nfn go(at_the_disco) {\n  panic\n  at_the_disco\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(at_the_disco) {
  panic
  at_the_disco
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[I gleam_P.Type[I]](atTheDisco I) I {
  panic(gleam_P.MakeError(
    "panic",
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    map[string]any{},
  ))
  return atTheDisco
}
